force-app/main/default/objects/ssot__LoyaltyTransactionJournal__dlm/fields/ssot__RedeemedPointsExpiryInfoText__c.field-meta.xml
<CustomField>
    <fullName>ssot__RedeemedPointsExpiryInfoText__c</fullName>
    <label>Redeemed Points Expiration Information</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RedeemedPointsExpiryInfoText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>