force-app/main/default/objects/ssot__LoyaltyTransactionJournal__dlm/fields/ssot__ReferralId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ReferralId__c</fullName>
    <label>Referral</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ReferralId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>