force-app/main/default/objects/ssot__LoyaltyTransactionJournal__dlm/fields/ssot__rel_1729831707047_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1729831707047_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LoyaltyTransactionJournal_LoyaltyJou_rel</label>
    <referenceTo>ssot__LoyaltyJournalSubtype__dlm</referenceTo>
    <relationshipLabel>LoyaltyTransactionJournal_LoyaltyJou_rel</relationshipLabel>
    <relationshipName>rel_1729831707047_end</relationshipName>
    <type>Lookup</type>
</CustomField>