force-app/main/default/objects/ssot__LoyaltyTransactionJournal__dlm/fields/ssot__rel_1729832299683_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1729832299683_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LoyaltyTransactionJournal_ProductCat_rel</label>
    <referenceTo>ssot__ProductCategory__dlm</referenceTo>
    <relationshipLabel>LoyaltyTransactionJournal_ProductCat_rel</relationshipLabel>
    <relationshipName>rel_1729832299683_end</relationshipName>
    <type>Lookup</type>
</CustomField>