force-app/main/default/objects/ssot__LoyaltyTransactionJournal__dlm/fields/ssot__rel_1729832369628_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1729832369628_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LoyaltyTransactionJournal_ReferralId_rel</label>
    <referenceTo>ssot__Referral__dlm</referenceTo>
    <relationshipLabel>LoyaltyTransactionJournal_ReferralId_rel</relationshipLabel>
    <relationshipName>rel_1729832369628_end</relationshipName>
    <type>Lookup</type>
</CustomField>